# 15721-s24-cache2

./: .gitignore  Cargo.toml  README.md  bench.sh  pqt_gen.py
.github/workflows/: build.yml  server-integration.yaml  server-integration.yml
client/: Cargo.toml  README.md  parquet_files10000row_10col_0.parquet  parquet_files10000row_10col_1.parquet  parquet_files10000row_10col_2.parquet  parquet_files10000row_10col_3.parquet  parquet_files10000row_10col_4.parquet  parquet_filessample.parquet
client/src/: benchmark.rs  client_api.rs  kv_store.rs  lib.rs  main.rs  storage_client.rs
server/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  compose.yaml  debug.sh  docker-entrypoint.sh  readme.md  redis.conf  run.sh  run_single_node.sh
server/.github/workflows/: server-integration.yaml
server/S3/: test13.txt  test16.txt
server/debug_data/: foo.txt
server/src/: cache.rs  client_connection.rs  db.rs  lib.rs  main.rs  redis.rs  server.rs  util.rs
server/src/storage/: mock_storage_connector.rs  mod.rs  s3_storage_connector.rs  storage_connector.rs
server/test/: setup.sh
server/test/test_s3_files/: test14.txt  test3.txt  test7.txt
server/tests/: integration.rs  server-integration.bats  setup.sh  test_integration.rs  test_setup_redis.sh  utils.rs
server/tests/test_s3_files/: test1.txt  test10.txt  test11.txt  test12.txt  test15.txt  test2.txt  test4.txt  test5.txt  test6.txt  test8.txt  test9.txt
