[package]
name = "client"
version = "0.1.0"
edition = "2018"
authors = ["Your Name <your.email@example.com>"]
description = "Client application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "3"
anyhow = "1.0"
parquet = "50.0.0"
arrow = "50.0.0"
log = "0.4"
thiserror = "1.0"
env_logger = "0.11.1"
async-trait = "0.1"
reqwest = "0.11.24"