[package]
name = "istziio_server_node"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "istziio_server_node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.1"
fern = "0.5"
clap = "3"
rocket = { version = "0.5.0", features = ["json"] }
redis = { version = "0.24.0", features = ["cluster"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
chrono = "0.4"
url = "2.5"
async-trait = "0.1"
aws-sdk-s3 = "0.3"